--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="s2J-Mq-6rJ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
@@ -21,24 +21,80 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="739" y="156"/>
         </scene>
         <!--Test Level View Controller-->
+        <scene sceneID="2Pe-vE-o9c">
+            <objects>
+                <viewController id="s2J-Mq-6rJ" customClass="TestLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1oy-an-ZFM"/>
+                        <viewControllerLayoutGuide type="bottom" id="GhM-h6-dF2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zNH-BF-KeF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czR-Ba-T5l">
+                                <rect key="frame" x="273" y="520" width="54" height="30"/>
+                                <state key="normal" title="Camera"/>
+                                <connections>
+                                    <segue destination="Tgb-Rn-ozr" kind="presentation" id="4iu-AR-M5d"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GhM-h6-dF2" firstAttribute="top" secondItem="czR-Ba-T5l" secondAttribute="bottom" constant="50" id="8jM-NU-qiL"/>
+                            <constraint firstItem="czR-Ba-T5l" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="vsU-0J-h0a"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U0F-Yn-HNi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="739" y="847"/>
+        </scene>
+        <!--Test Modal Navigation Controller-->
+        <scene sceneID="48C-Bn-86n">
+            <objects>
+                <navigationController id="Tgb-Rn-ozr" customClass="TestModalNavigationController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aKO-AI-A1A">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="oQd-xS-Y4W" kind="relationship" relationship="rootViewController" id="VJp-Ko-3df"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qHy-Rt-HOn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1432" y="847"/>
+        </scene>
+        <!--Camera View Controller-->
         <scene sceneID="rU6-MS-vO6">
             <objects>
-                <viewController id="oQd-xS-Y4W" customClass="TestLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="oQd-xS-Y4W" customClass="CameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GxB-1U-11h"/>
                         <viewControllerLayoutGuide type="bottom" id="7rk-0H-Pni"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="eJa-ww-fRj">
+                    <view key="view" contentMode="scaleToFill" id="eJa-ww-fRj" customClass="Tested">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="R2M-YJ-vmM">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="4Ra-ba-zD7">
+                            <connections>
+                                <segue destination="h88-wQ-kVL" kind="unwind" unwindAction="cancelToLevelViewController:" id="PzC-qd-xUR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zDL-yt-bDt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="h88-wQ-kVL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1069" y="224"/>
+            <point key="canvasLocation" x="2155" y="847"/>
         </scene>
     </scenes>
 </document>
