--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -25,10 +25,17 @@
                                     <segue destination="Tgb-Rn-ozr" kind="presentation" id="4iu-AR-M5d"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Product" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SwC-97-IR5">
+                                <rect key="frame" x="168" y="246" width="264" height="107"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="GhM-h6-dF2" firstAttribute="top" secondItem="czR-Ba-T5l" secondAttribute="bottom" constant="50" id="8jM-NU-qiL"/>
+                            <constraint firstItem="SwC-97-IR5" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="meC-KS-BUk"/>
                             <constraint firstItem="czR-Ba-T5l" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="vsU-0J-h0a"/>
                         </constraints>
                     </view>
@@ -39,6 +46,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="productLabel" destination="SwC-97-IR5" id="uqP-Ra-kmf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0F-Yn-HNi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="BI5-Kh-Sl2" userLabel="Exit" sceneMemberID="exit"/>
@@ -77,7 +87,7 @@
                     <navigationItem key="navigationItem" id="R2M-YJ-vmM">
                         <barButtonItem key="rightBarButtonItem" title="Done" id="4Ra-ba-zD7">
                             <connections>
-                                <segue destination="h88-wQ-kVL" kind="unwind" unwindAction="cancelToLevelViewController:" id="PzC-qd-xUR"/>
+                                <segue destination="h88-wQ-kVL" kind="unwind" identifier="barcodeScannedSegue" unwindAction="cancelToLevelViewController:" id="PzC-qd-xUR"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
