--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -25,14 +25,14 @@
                                     <segue destination="Tgb-Rn-ozr" kind="presentation" id="4iu-AR-M5d"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Hangman" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SwC-97-IR5">
-                                <rect key="frame" x="168" y="246" width="264" height="107"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SwC-97-IR5">
+                                <rect key="frame" x="168" y="139" width="264" height="107"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbt-Wq-LQe">
-                                <rect key="frame" x="280" y="380" width="40" height="70"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbt-Wq-LQe">
+                                <rect key="frame" x="215" y="237" width="170" height="133"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -40,7 +40,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="czR-Ba-T5l" firstAttribute="top" secondItem="wbt-Wq-LQe" secondAttribute="bottom" constant="150" id="09h-ks-NK4"/>
                             <constraint firstItem="GhM-h6-dF2" firstAttribute="top" secondItem="czR-Ba-T5l" secondAttribute="bottom" constant="50" id="8jM-NU-qiL"/>
+                            <constraint firstItem="wbt-Wq-LQe" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="UF3-aa-Juf"/>
+                            <constraint firstItem="SwC-97-IR5" firstAttribute="top" secondItem="1oy-an-ZFM" secondAttribute="bottom" constant="75" id="aDK-WX-cN7"/>
                             <constraint firstItem="SwC-97-IR5" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="meC-KS-BUk"/>
                             <constraint firstItem="czR-Ba-T5l" firstAttribute="centerX" secondItem="zNH-BF-KeF" secondAttribute="centerX" id="vsU-0J-h0a"/>
                         </constraints>
